--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,14 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: PhD. Candidate, Structural Fire Engineering | February 2022 – present (expected June 2024)
+, Stellenbosch, South Africa
+  uni: Stellenbosch University
+  year: 2022 &mdash; present (expected June 2024)
   awards:
-    - award: Summa Cumme Laude graduate
+    - award: Summa Cumme Laude graduate 
   summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: MSc, Civil/Structural Engineering
+  uni: Jimma University
+  year: 2016 &mdash; 2018
+  award: GPA 3.84/4.0 (Ranked top  1 %)
+  summary: Thesis - Moment Redistribution Behavior of Steel Fiber Reinforced Concrete Continuous Beams.
