--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,3 +12,9 @@
   year: 2016 &mdash; 2018
   award: GPA 3.84/4.0 (Ranked top  1 %)
   summary: Thesis - Moment Redistribution Behavior of Steel Fiber Reinforced Concrete Continuous Beams.
+
+- degree: BSc, Civil Engineering
+  uni: Jimma University
+  year: 2010 &mdash; 2015
+  award: GPA 3.8/4.0 (Ranked top  1 %)
+  summary: Awarded a best student project.
