--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,8 +1,7 @@
 # Degree
-- degree: PhD. Candidate, Structural Fire Engineering | February 2022 – present (expected June 2024)
-, Stellenbosch, South Africa
+- degree: PhD. Candidate, Structural Fire Engineering
   uni: Stellenbosch University
-  year: 2022 &mdash; present (expected June 2024)
+  year: February 2022 &mdash; present (expected June 2024)
   awards:
     - award: Summa Cumme Laude graduate 
   summary: If you had any meaningful roles at college, feel free to write about them here
