--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,17 +3,24 @@
   uni: Stellenbosch University
   year: February 2022 &mdash; present (expected June 2024)
   awards:
-    - award: Summa Cumme Laude graduate 
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: Supervisors |  Prof. Richard Walls & Dr. Natalia Flores Quiroz 
+    Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and
+Recycled Materials (Eco-Aggregates).
+  summary: Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO
+5660-1), and Bomb calorimeter (ISO 1928) to characterize the thermal decomposition, kinetic model,
+and fire properties of biobased and recycled waste materials. Performed H-TRIS and fire resistance
+tests (SANS 10177-2 & ASTM E119). Expertise in designing and conducting thermo-mechanical
+experiments and heat transfer modelling. Collaborated with industrial partners. Published novel
+research papers.
 
 - degree: MSc, Civil/Structural Engineering
   uni: Jimma University
-  year: 2016 &mdash; 2018
+  year: October 2016 &mdash; December 2018
   award: GPA 3.84/4.0 (Ranked top  1 %)
   summary: Thesis - Moment Redistribution Behavior of Steel Fiber Reinforced Concrete Continuous Beams.
 
 - degree: BSc, Civil Engineering
   uni: Jimma University
-  year: 2010 &mdash; 2015
+  year: October 2010 &mdash; July 2015
   award: GPA 3.8/4.0 (Ranked top  1 %)
   summary: Awarded a best student project.
