--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,14 +3,8 @@
   uni: Stellenbosch University
   year: February 2022 &mdash; present (expected June 2024)
   awards:
-    - award: Supervisors - Prof. Richard Walls & Dr. Natalia Flores Quiroz  
-    - award: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
-  summary: Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO
-          5660-1), and Bomb calorimeter (ISO 1928) to characterize the thermal decomposition, kinetic model,
-          and fire properties of biobased and recycled waste materials. Performed H-TRIS and fire resistance
-          tests (SANS 10177-2 & ASTM E119). Expertise in designing and conducting thermo-mechanical
-          experiments and heat transfer modelling. Collaborated with industrial partners. Published novel
-          research papers.
+    - award: Supervisors - Prof. Richard Walls & Dr. Natalia Flores Quiroz  | Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
+  summary: Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO 5660-1), and Bomb calorimeter (ISO 1928) to characterize the thermal decomposition, kinetic model, and fire properties of biobased and recycled waste materials. Performed H-TRIS and fire resistance tests (SANS 10177-2 & ASTM E119). Expertise in designing and conducting thermo-mechanical experiments and heat transfer modelling. Collaborated with industrial partners. Published novel research papers.
 
 - degree: MSc, Civil/Structural Engineering
   uni: Jimma University
