--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,7 +6,8 @@
   summary: Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
             shopping centers.
   summary: Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
-            scenarios for industrial and shopping centersWrite about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+            scenarios for industrial and shopping centersWrite about your core competencies in one or two sentences describing your position. 
+            If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
