--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,11 +3,11 @@
 - company: CFS Engineering Consultants, South Africa
   position: Fire Engineer, Freelancer
   duration: May 2023 &mdash; August 2023
-  summary: Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
-            shopping centers.
-  summary: Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
-            scenarios for industrial and shopping centersWrite about your core competencies in one or two sentences describing your position. 
-            If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+            <ul class="resume-item-list"><li>Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
+            shopping centers.</li>
+            <li>Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
+            scenarios for industrial and shopping centers </li>
+            <li>or a team or department you worked with</li></ul>
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
