--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,5 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Structural Fire Engineering
+- description: Bio-Based and Net-Zero Carbon-Sustainable Construction Practices
+- description: Intersection of WUI fires and Green Buildings
+- description: FEM And CFD
