--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
+- url: "https://www.fireprotectionengineering-digital.com/fireprotectionengineering/library/item/q4_2022/4063679/"
+  description: FACES OF THE FUTURE Fire Protection Engineering in the Developing World
+- url: "https://www.fireprotectionengineering-digital.com/fireprotectionengineering/library/item/q4_2022/4063679/"
   description: Springfield Young Professionals
