--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,11 +3,11 @@
 - company: CFS Engineering Consultants, South Africa
   position: Fire Engineer, Freelancer
   duration: May 2023 &mdash; August 2023
-    - summary: Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
+  summary: Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
                 shopping centers.
-    - summary: Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
+  summary: Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
                 scenarios for industrial and shopping centers.
-    - summary: or a team or department you worked with...
+  summary: or a team or department you worked with...
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
