--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,10 +2,10 @@
 - degree: PhD. Candidate, Structural Fire Engineering
   uni: Stellenbosch University
   year: February 2022 &mdash; present (expected June 2024)
+  summary: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
   awards:
-    - award: Supervisors - Prof. Richard Walls & Dr. Natalia Flores Quiroz  | 
-  summary: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates). 
-            <ul class="resume-item-list"><li>Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO 5660-1),
+    - award: Supervisors - Prof. Richard Walls & Dr. Natalia Flores Quiroz
+  summary: <ul class="resume-item-list"><li>Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO 5660-1),
             and Bomb calorimeter (ISO 1928) to characterize the thermal decomposition, kinetic model, and fire properties of biobased and recycled waste materials.</li> 
             <li>Performed H-TRIS and fire resistance tests (SANS 10177-2 & ASTM E119).</li> 
             <li>Expertise in designing and conducting thermo-mechanical experiments and heat transfer modelling.</li>
