--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,8 @@
 # Degree
 - degree: PhD. Candidate, Structural Fire Engineering
-  uni: Stellenbosch University
+  uni: Stellenbosch University, South Africa
   year: February 2022 &mdash; present (expected June 2024)
-  summary: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
-  awards:
+  awards: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
     - award: Supervisors - Prof. Richard Walls & Dr. Natalia Flores Quiroz
   summary: <ul class="resume-item-list"><li>Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO 5660-1),
             and Bomb calorimeter (ISO 1928) to characterize the thermal decomposition, kinetic model, and fire properties of biobased and recycled waste materials.</li> 
@@ -11,14 +10,21 @@
             <li>Expertise in designing and conducting thermo-mechanical experiments and heat transfer modelling.</li>
             <li>Collaborated with industrial partners.</li><li>Published novel research papers.</li></ul>
  
-- degree: MSc, Civil/Structural Engineering
+- degree: Burgers Program and Combustion Institute Summer School on Fire Safety Science-Wildland/WUI Fire Behavior
+  uni: University of Maryland, College Park, USA
+  year: June 2023
+  award: 
+  summary: <ul class="resume-item-list"><li>Attended a week-long course comprising 19 topics covering WUI fires, fire behavior, combustion, flame and fire spread, extreme fires, informal settlements, human behavior in fires, fire modeling,
+            remote sensing and Emberometer, and real-time fire forecasting.</li></ul>
+
+- degree: MSc, Civil/Structural Engineering, Ethiopia
   uni: Jimma University
   year: October 2016 &mdash; December 2018
   award: GPA 3.84/4.0 (Ranked top  1 %)
   summary: Thesis - Moment Redistribution Behavior of Steel Fiber Reinforced Concrete Continuous Beams.
 
 - degree: BSc, Civil Engineering
-  uni: Jimma University
+  uni: Jimma University, Ethiopia
   year: October 2010 &mdash; July 2015
   award: GPA 3.8/4.0 (Ranked top  1 %)
   summary: Received Best BSc Student Research Project Award.
