--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ resume_contact_telephone:       "+27727065780"
 resume_contact_address:         "Stellenbosch, South Africa"
 
 resume_header_contact_info:     "Stellenbosch • +27727065780 • yshewalul@sun.ac.za"
-display_header_contact_info:    "false"
+display_header_contact_info:    "true"
 
 resume_header_intro: "<p>Dedicated and results-oriented PhD candidate in Structural Fire Engineering. SFPE Foundation Student
 Research Grant 2021 recipient. Expertise in interdisciplinary knowledge in fire safety engineering, structural
