--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,8 @@
 - degree: PhD. Candidate, Structural Fire Engineering
   uni: Stellenbosch University, South Africa
   year: February 2022 &mdash; present (expected June 2024)
-  awards: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
+  awards: 
+    - award: Research Field - Fire Behavior of Sustainable Construction Practices Incorporating Biobased and Recycled Materials (Eco-Aggregates).
     - award: Supervisors - Prof. Richard Walls & Dr. Natalia Flores Quiroz
   summary: <ul class="resume-item-list"><li>Conducted TGA (ASTM E1131 & ISO 11358), DSC (ISO 11357-1), Cone calorimeter (ASTM E1354 & ISO 5660-1),
             and Bomb calorimeter (ISO 1928) to characterize the thermal decomposition, kinetic model, and fire properties of biobased and recycled waste materials.</li> 
@@ -17,8 +18,8 @@
   summary: <ul class="resume-item-list"><li>Attended a week-long course comprising 19 topics covering WUI fires, fire behavior, combustion, flame and fire spread, extreme fires, informal settlements, human behavior in fires, fire modeling,
             remote sensing and Emberometer, and real-time fire forecasting.</li></ul>
 
-- degree: MSc, Civil/Structural Engineering, Ethiopia
-  uni: Jimma University
+- degree: MSc, Civil/Structural Engineering
+  uni: Jimma University, Ethiopia
   year: October 2016 &mdash; December 2018
   award: GPA 3.84/4.0 (Ranked top  1 %)
   summary: Thesis - Moment Redistribution Behavior of Steel Fiber Reinforced Concrete Continuous Beams.
