--- a/_data/education.yml
+++ b/_data/education.yml
@@ -15,7 +15,8 @@
   uni: University of Maryland, College Park, USA
   year: June 2023
   award: 
-  summary: <ul class="resume-item-list"><li>Attended a week-long course comprising 19 topics covering WUI fires, fire behavior, combustion, flame and fire spread, extreme fires, informal settlements, human behavior in fires, fire modeling,
+  summary: <ul class="resume-item-list"><li>Attended a week-long course comprising 19 topics covering WUI fires, fire behavior, combustion, flame and fire spread, extreme fires,
+           informal settlements, human behavior in fires, fire modeling,
             remote sensing and Emberometer, and real-time fire forecasting.</li></ul>
 
 - degree: MSc, Civil/Structural Engineering
