--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,5 +1,5 @@
 # Jobs
-# VP of Global Communications
+# 
 - company: CFS Engineering Consultants, South Africa
   position: Fire Engineer, Freelancer
   duration: May 2023 &mdash; August 2023
@@ -9,15 +9,16 @@
                 scenarios for industrial and shopping centers.</li> 
                 <li>or a team or department you worked with...</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration: Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+# 
+- company: Stellenbosch University, South Africa
+  position: Fire Engineer Consultant
+  duration: July 2022 &mdash;  December 2023
+  summary: <ul class="resume-item-list"><li>Wrote a thermo-mechanical heat transfer model code for composite slab using Typescript for the VOIDCON Group.</li> 
+            <li>Developed a heat transfer analysis model for a composite construction system using coupled Python and Abaqus for FormWorks UK Ltd.</li></ul>
 
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+# 
+- company: Jimma University Design and Consultancy Enterprise, Ethiopia
+  position: Structural Engineer 
+  duration: December 2018  &mdash; Febrauary 2022
+  summary: <ul class="resume-item-list"><li>Led the structural design and analysis team for the Jimma University academic building project.</li> 
+          <li>Developed detailed construction drawings and specifications.</li></ul>
