--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
+resume_section_teaching:        true
 resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
