--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -3,22 +3,25 @@
 - company: Stellenbosch University, South Africa
   position: Teaching Assistant
   duration: May 2023 &mdash; August 2023
-  summary: <ul class="resume-item-list"><li>Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
-                shopping centers.</li> 
-                <li>Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
-                scenarios for industrial and shopping centers.</li> 
-                <li>or a team or department you worked with...</li></ul>
+  summary: <ul class="resume-item-list"><li>Served as a Teaching Assistant for postgrad Fire Safety and undergrad Structural Design Courses.</li> 
+            <li>Assisted in practical fire testing of materials and contributed to the academic development of students.</li></ul>
 
 # 
 - company: Jimma University, Ethiopia
   position: Lecturer
   duration: July 2022 &mdash;  December 2023
-  summary: <ul class="resume-item-list"><li>Wrote a thermo-mechanical heat transfer model code for composite slab using Typescript for the VOIDCON Group.</li> 
-            <li>Developed a heat transfer analysis model for a composite construction system using coupled Python and Abaqus for FormWorks UK Ltd.</li></ul>
+  summary: <ul class="resume-item-list"><li>Developed course materials and syllabi and delivered engaging lectures and tutorials to
+          undergraduate students for the Structural Analysis course.</li> 
+          <li>Wrote a grant research proposal focused on enhancing concrete strength through the utilization of
+            waste steel scrap.</li> <li>Wrote a thermo-mechanical heat transfer model code for composite slab using Typescript for the VOIDCON Group.</li> 
+            <li>Developed course materials and syllabi and delivered engaging lectures and tutorials to
+              undergraduate students for the Structural Analysis course.</li> 
+           <li>Wrote a grant research proposal focused on enhancing concrete strength through the utilization of
+            waste steel scrap.</li></ul>
 
 # 
 - company: Jimma University, Ethiopia
   position: Assistant Lecturer
   duration: December 2018  &mdash; Febrauary 2022
-  summary: <ul class="resume-item-list"><li>Led the structural design and analysis team for the Jimma University academic building project.</li> 
-          <li>Developed detailed construction drawings and specifications.</li></ul>
+  summary: <ul class="resume-item-list"><li>Supervised undergraduate civil engineering students in structural and construction laboratory
+            experiments. Assisted tutorial sessions and in grading assignments, projects, and exams.</li></ul>
