--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -12,12 +12,7 @@
   duration: July 2022 &mdash;  December 2023
   summary: <ul class="resume-item-list"><li>Developed course materials and syllabi and delivered engaging lectures and tutorials to
           undergraduate students for the Structural Analysis course.</li> 
-          <li>Wrote a grant research proposal focused on enhancing concrete strength through the utilization of
-            waste steel scrap.</li> <li>Wrote a thermo-mechanical heat transfer model code for composite slab using Typescript for the VOIDCON Group.</li> 
-            <li>Developed course materials and syllabi and delivered engaging lectures and tutorials to
-              undergraduate students for the Structural Analysis course.</li> 
-           <li>Wrote a grant research proposal focused on enhancing concrete strength through the utilization of
-            waste steel scrap.</li></ul>
+          <li>Wrote a grant research proposal focused on enhancing concrete strength through the utilization of waste steel scrap.</li></ul>
 
 # 
 - company: Jimma University, Ethiopia
