--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,11 +3,10 @@
 - company: CFS Engineering Consultants, South Africa
   position: Fire Engineer, Freelancer
   duration: May 2023 &mdash; August 2023
-  summary: <ul class="resume-item-list"><li>Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and
-                shopping centers.</li> 
-                <li>Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in fire
-                scenarios for industrial and shopping centers.</li> 
-                <li>or a team or department you worked with...</li></ul>
+  summary: <ul class="resume-item-list"><li>Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and shopping centers.</li> 
+                <li>Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in firevscenarios for industrial and shopping centers.</li> 
+                <li>Designed basic piping systems and computed hydraulic calculations concerning sprinkler systems in remote areas for industrial and shopping centers.</li> 
+                <li>Prepared performance-based sprinkler drawings and specifications using AutoCAD and REVIT for industrial and shopping centers.</li></ul>
 
 # 
 - company: Stellenbosch University, South Africa
