--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,11 +1,11 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
+- organization: SFPE Stellenbosch University Chapter
+  role: President
+  year: 2023 &mdash; 2024
+  url: https://www.sfpe.org/membership-communities/chapters/student-chapters
+  summary: 
 
 
 - organization: Yale Amnesty International
