--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,31 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award:  Burgers Program and Combustion Institute Summer School on Fire Safety Science
+  organization: University of Maryland, USA
+  year: 2023
+  summary: 
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Independent Travel Bursary
+  organization: Stellenbosch University, South Africa
+  year: 2023
+  summary: 
+  
+- award: FireSUN PhD Bursary
+  organization: Stellenbosch University, South Africa
+  year: 2022
+  summary:
+
+- award: SFPE Student Research Grant
+  organization: SFPE Foundation, USA
+  year: 2021
+  summary: 
+
+- award: ERA Post-Graduate (MSc) Programs Scholarship
+  organization: Ethiopian Road Authority (ERA), Ethiopia
+  year: 2016
+  summary:
+
+
+- award: Best BSc Student Research Project Award
+  organization: Jimma University, Ethiopia
+  year: 2015
+  summary:
