--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,17 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+# 
+- project: Fire Testing of Resilient and Sustainable Building Materials (Co-PI with Prof R. Walls, Dr N. F. Quiroz)
+  role: SFPE Foundation Research Grant
+  duration: 2023 &mdash; Present
+  url: "https://www.sfpe.org/foundation/foundationresearch/foundationresearch-ongoing"
+  description: The project's objectives are to identify the sustainable building materials used in construction, 
+                the fire testing methods used for those materials, and potential fire risks that are not addressed in existing testing methods with further experimental fire testing.
 
-# Springfield Community Outreach Group
+# 
 - project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
+  role: The Institution of Structural Engineers MSc Research Grant
   duration: 2007 &mdash; Present
   # url: "#"
   description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
