--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -2,14 +2,14 @@
 # 
 - company: Stellenbosch University, South Africa
   position: Teaching Assistant
-  duration: May 2023 &mdash; August 2023
+  duration: July 2022 &mdash; Present
   summary: <ul class="resume-item-list"><li>Served as a Teaching Assistant for postgrad Fire Safety and undergrad Structural Design Courses.</li> 
             <li>Assisted in practical fire testing of materials and contributed to the academic development of students.</li></ul>
 
 # 
 - company: Jimma University, Ethiopia
   position: Lecturer
-  duration: July 2022 &mdash;  December 2023
+  duration: December 2018  &mdash; Febrauary 2022
   summary: <ul class="resume-item-list"><li>Developed course materials and syllabi and delivered engaging lectures and tutorials to
           undergraduate students for the Structural Analysis course.</li> 
           <li>Wrote a grant research proposal focused on enhancing concrete strength through the utilization of waste steel scrap.</li></ul>
@@ -17,6 +17,6 @@
 # 
 - company: Jimma University, Ethiopia
   position: Assistant Lecturer
-  duration: December 2018  &mdash; Febrauary 2022
+  duration: July 2015  &mdash; December 2018
   summary: <ul class="resume-item-list"><li>Supervised undergraduate civil engineering students in structural and construction laboratory
             experiments. Assisted tutorial sessions and in grading assignments, projects, and exams.</li></ul>
