--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ resume_looking_for_work:        "yes"
 # Decide which sections to use
 # comment out to hide
 resume_section_education:       true
+resume_section_publications:    true
 resume_section_interests:       true
 resume_section_recognition:     true
 resume_section_projects:        true
