--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,12 +1,48 @@
 # links
-- title: Title of Publication 1
-  authors: John Doe, Jane Smith
-  journal: Journal of XYZ
-  date: January 2024
-  doi: "10.1234/xyz"
+- title: “Sustainable concrete bricks production and fire behavior testing”
+  authors: Shewalul, Y. W., Quiroz, N. F., Walls, R.
+  journal: under review in Fire Technology
+  date: 
+  doi: 
 
-- title: Title of Publication 2
-  authors: John Doe, Jane Smith
-  journal: Conference on ABC
-  date: March 2023
-  doi: "10.5678/abc"
+- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Construction and Building Materials
+  date: 
+  doi: 
+
+- title: "Fire behavior of hemp blocks: A biomass-based construction material"
+  authors: Shewalul, Y. W., Quiroz, N.F., Streicher, D., Walls, R.
+  journal: Journal of Building Engineering
+  date: 2023
+  doi: https://doi.org/10.1016/j.jobe.2023.108147
+
+- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Construction and Building Materials
+  date: 
+  doi: 
+
+- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Construction and Building Materials
+  date: 
+  doi: 
+
+- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Construction and Building Materials
+  date: 
+  doi: 
+
+- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Construction and Building Materials
+  date: 
+  doi: 
+
+- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Construction and Building Materials
+  date: 
+  doi:  
