--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,32 +17,27 @@
   date: 2023
   doi: https://doi.org/10.1016/j.jobe.2023.108147
 
-- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
-  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
-  journal: under review in Construction and Building Materials
-  date: 
-  doi: 
+- title: "Experimental investigation on mechanical properties of concrete using different sources of water for mixing and curing concrete"
+  authors: Mohe, N.S., Shewalul, Y. W., Agon, E.C.
+  journal: Case Studies in Construction Materials
+  date: 2022
+  doi: https://doi.org/10.1016/j.cscm.2022.e00959
 
-- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
-  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
-  journal: under review in Construction and Building Materials
-  date: 
-  doi: 
+- title: "Experimental study of the effect of waste steel scrap as reinforcing material on the mechanical properties of concrete"
+  authors: Shewalul, Y. W.
+  journal: Case Studies in Construction Materials
+  date: 2021
+  doi: https://doi.org/10.1016/j.cscm.2021.e00490
 
-- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
-  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
-  journal: under review in Construction and Building Materials
-  date: 
-  doi: 
+- title: "Numerical and FEA investigation of sectional capacity and moment redistribution behavior of steel fiber reinforced concrete (SFRC) beam"
+  authors: Shewalul, Y. W.
+  journal: Heliyon
+  date: 2021
+  doi: https://doi.org/10.1016/j.heliyon.2021.e07354
 
-- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
-  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
-  journal: under review in Construction and Building Materials
-  date: 
-  doi: 
-
-- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
-  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
-  journal: under review in Construction and Building Materials
-  date: 
-  doi:  
+- title: "Response of the flat reinforced concrete floor slab with openings under cyclic in-plane loading"
+  authors: Kalib, E.S., Shewalul, Y. W.
+  journal: Advances in Civil Engineering
+  date: 2021
+  doi: https://doi.org/10.1155/2021/2503475
+  
