--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,13 +2,13 @@
 - title: “Sustainable concrete bricks production and fire behavior testing”
   authors: Shewalul, Y. W., Quiroz, N. F., Walls, R.
   journal: under review in Fire Technology
-  date: 
+  date: 2024
   doi: 
 
 - title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
   authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
   journal: under review in Construction and Building Materials
-  date: 
+  date: 2024
   doi: 
 
 - title: "Fire behavior of hemp blocks: A biomass-based construction material"
