--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,14 +3,14 @@
 
 # 
 - project: Fire Testing of Resilient and Sustainable Building Materials 
-  role: SFPE Foundation Research Grant
+  granting agency: SFPE Foundation Research Grant
   duration: 2023 &mdash; Present
   url: "https://www.sfpe.org/foundation/foundationresearch/foundationresearch-ongoing"
   description: The project's objectives are to identify the sustainable building materials used in construction, 
                 the fire testing methods used for those materials, and potential fire risks that are not addressed in existing testing methods with further experimental fire testing. I am working as Co-PI with Prof R. Walls, Dr N. F. Quiroz.
 
 - project: Fire Behavior of Construction Systems Incorporating Waste Materials
-  role: SFPE Foundation Student Research Grant
+  rgranting agency: SFPE Foundation Student Research Grant
   duration: 2021 &mdash; Present
   url: "https://www.sfpe.org/foundation/foundationresearch/appgrants"
   description: The project aim is to identify commonly used waste materials in construction systems for which fire ratings have not been obtained and conduct experimental fire testing on 
@@ -18,14 +18,14 @@
             the fire service when responding to incidents where large quantities of oil-based recycled materials are encapsulated in building elements.
 
 - project: Investigating Mechanical Properties of Concrete Using Different Sources of Water for Mixing and Curing
-  role: The Institution of Structural Engineers MSc Research Grant
+  granting agency: The Institution of Structural Engineers MSc Research Grant
   duration: 2021 &mdash; 2022
   url: "https://www.istructe.org/resources/report/experimental-investigation-of-mechanical-propertie/"
   description: The primary aim of the project is to find a potential replacement for potable water for concrete production taking in to consideration the fact that the item is scarce.
 
 
 - project: Sustainable Integration of Waste Steel Scrap as Reinforcing Material on the Mechanical Properties of Concrete
-  role: Research and Publication Director of Jimma University Grant
+  granting agency: Research and Publication Director of Jimma University Grant
   duration: 2020 &mdash; 2021
  # url: "https://www.istructe.org/resources/report/experimental-investigation-of-mechanical-propertie/"
   description: The primary aim of the project is to incorporate waste steel scrap as a sustainable reinforcing material in concrete and to enhace its mechanical properties.
