--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
                 the fire testing methods used for those materials, and potential fire risks that are not addressed in existing testing methods with further experimental fire testing. I am working as Co-PI with Prof R. Walls, Dr N. F. Quiroz.
 
 - project: Fire Behavior of Construction Systems Incorporating Waste Materials
-  rgranting agency: SFPE Foundation Student Research Grant
+  granting agency: SFPE Foundation Student Research Grant
   duration: 2021 &mdash; Present
   url: "https://www.sfpe.org/foundation/foundationresearch/appgrants"
   description: The project aim is to identify commonly used waste materials in construction systems for which fire ratings have not been obtained and conduct experimental fire testing on 
