--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
 - url: "https://www.fireprotectionengineering-digital.com/fireprotectionengineering/library/item/q4_2022/4063679/"
-  description: FACES OF THE FUTURE Fire Protection Engineering in the Developing World
+  description: FACES OF THE FUTURE Fire Protection Engineering in the Developing World.
 - url: "https://ssfss2023.umd.edu/students-and-instructors/"
   description: Burgers Program and Combustion Institute Summer School on Fire Safety Science - Wildland/WUI Fire Behavior
