--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -2,4 +2,5 @@
 - description: Structural Fire Engineering
 - description: Bio-Based and Net-Zero Carbon-Sustainable Construction Practices
 - description: Intersection of WUI fires and Green Buildings
-- description: FEM And CFD
+- description: Advanced Fire Modeling and Simulation
+- description: Performance-Based Fire Safety Design
