--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ resume_section_teaching:        true
 resume_section_experience:      true
 resume_section_skills:          true
 resume_section_associations:    true
+resume_section_presentations:   true
 resume_section_links:           true
 resume_section_references:      true
 
