--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -1,6 +1,6 @@
 # presentations
 - url: "https://www.pathlms.com/sfpe/courses/64565/webinars/42369"
-  #description: SFPE Research in Fire Engineering: New Research in Structures - Design Workflows and Green Materials.
+  description: SFPE Research in Fire Engineering: New Research in Structures - Design Workflows and Green Materials.
 - url: "https://ssfss2023.umd.edu/students-and-instructors/"
   description: Burgers Program and Combustion Institute Summer School on Fire Safety Science - Wildland/WUI Fire Behavior.
 
