--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -4,7 +4,7 @@
   name: Sustainable Civil Engineering at the Beginning of Third Millennium - Proceedings of 15th International Congress on Advances in Civil Engineering (ACE2023)
   date: 2023
   city: North Cyprus, Türkiye
-  doi: 
+  doi: https://doi.org/10.1007/978-981-97-1781-1_4
 
 
 - title: “Experimental study on the utilization of waste steel scrap to enhance concrete properties”
