--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -1,9 +1,14 @@
 presentations:
-- url: "https://www.pathlms.com/sfpe/courses/64565/webinars/42369"
-#description: SFPE Research in Fire Engineering: New Research in Structures - Design Workflows and Green Materials.
-- url: "https://www.pathlms.com/sfpe/courses/64565/webinars/42369"
-  description: SFPE Research in Fire Engineering: New Research in Structures - Design Workflows and Green Materials.
-
+  - title: "SFPE Research in Fire Engineering: New Research in Structures - Design Workflows and Green Materials."
+    event: "Event Name 1"
+    date: "Date 1"
+    url: "https://www.pathlms.com/sfpe/courses/64565/webinars/42369"
+    link_text: "Link Text 1"
+  - title: "Title of Presentation 2"
+    event: "Event Name 2"
+    date: "Date 2"
+    url: "http://link-to-presentation-2.com"
+    link_text: "Link Text 2"
 
 
 
