--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -1,6 +1,6 @@
 #presentations:
 - title: "New Research in Structures - Design Workflows and Green Materials."
-  event: "SFPE Research in Fire Engineering"
+  event: "SFPE Research in Fire Engineering Webinar Series"
   date: "2024"
   url: "https://www.pathlms.com/sfpe/courses/64565/webinars/42369"
 
