--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -1,7 +1,7 @@
 #presentations:
 - title: "New Research in Structures - Design Workflows and Green Materials."
   event: "SFPE Research in Fire Engineering Webinar Series"
-  date: "2024"
+  date: "April 9, 2024"
   url: "https://www.pathlms.com/sfpe/courses/64565/webinars/42369"
 
 
