--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Yohannes W. Shewalul"
+title: "Yohannes W. Shewalul, PhD"
 description: "A resume for Yohannes W. Shewalul."
 
 # Build settings
