--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,5 +1,11 @@
 # Jobs
 # 
+- company: Stellenbosch University, South Africa
+  position: Postdoctoral Fellow
+  duration: January 2025 &mdash; May 2025
+  summary: <ul class="resume-item-list"><li>Conducted research on post-fire structural response and materials behaviour in fire. </li></ul>
+
+
 - company: CFS Engineering Consultants, South Africa
   position: Fire Engineer, Freelancer
   duration: May 2023 &mdash; August 2023
