--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,11 +3,16 @@
 - company: Stellenbosch University, South Africa
   position: Postdoctoral Fellow
   duration: January 2025 &mdash; May 2025
-  summary: <ul class="resume-item-list"><li>Conducted research on post-fire structural response and materials behaviour in fire. </li></ul>
+  summary: <ul class="resume-item-list"><li>Conducted research on post-fire structural response and materials behavior in fire. </li></ul>
+
+- company: Kindling, South Africa
+  position: Fire Protection Engineer (Part-Time)
+  duration: June 2024 &mdash; October 2024
+  summary: <ul class="resume-item-list"><li>I assisted Kindling with large-scale fire experiments in informal settlements, where over 20 shacks/dwellings were tested. </li></ul>
 
 
 - company: CFS Engineering Consultants, South Africa
-  position: Fire Engineer, Freelancer
+  position: Fire Protection Engineer (Part-Time)
   duration: May 2023 &mdash; August 2023
   summary: <ul class="resume-item-list"><li>Utilized FDS (PyroSim) to model and analyze fire dynamics in diverse scenarios for industrial and shopping centers.</li> 
                 <li>Demonstrated proficiency in utilizing Pathfinder to simulate pedestrian movement and egress in firevscenarios for industrial and shopping centers.</li> 
